# SMC_F429

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  download.bat  download.sh  main.c  openmv.py  openmv.py.autosave
.cache/clangd/index/: ControlTask.c.B06205B324403C49.idx  FreeRTOS.h.FF5E7D672179C48F.idx  FreeRTOSConfig.h.DC08DD7A5CA0CC70.idx  OLED.c.C1EC30A871171080.idx  OLED.h.CE8B9BF14AC431E8.idx  OLED_Data.c.44DAF301BB6BC700.idx  OLED_Data.h.DD9BE6F898ED4984.idx  Project.h.1F946F59D99CE5F9.idx  RTOSTask.c.D5467452190684A9.idx  RTOSTaskConfig.h.5F4B62224E68BABA.idx  Serial.c.04440D44E8FB0606.idx  Serial.h.22E2E5ADF87E1CE5.idx  control.c.3DF9B7590A76CAA4.idx  control.h.0C4D630B3454ABE5.idx  core_cm4.h.59F9E5258DC6CDEA.idx  core_cmFunc.h.DCACC6D396615C78.idx  core_cmInstr.h.8B9AB9CAF13DA28D.idx  core_cmSimd.h.E36FB3CA88708471.idx  ctiic.c.6C7F5C88569D663D.idx  ctiic.h.7B0C56CBD70321DE.idx  deprecated_definitions.h.C3FCBB838F0AC309.idx  dmpKey.h.DC58C910B4AB085B.idx  dmpmap.h.AAA2E1F5A710C5C4.idx  exti.c.17F3EEBB2A649E32.idx  font.h.F1A8D2C12960031C.idx  ft5206.c.BC1AF58010110CE3.idx  ft5206.h.3359A140BEF050C0.idx  gpio.c.5710D2A83FF2576B.idx  gpio.h.DDE02389C1EBA894.idx  gt9xxx.c.31F8290F244CB037.idx  gt9xxx.h.5C3BD4D890021E48.idx  hardi2c.c.C7AEA5AEFE7A1F20.idx  hardi2c.h.2F35CFD0E3D90888.idx  hardspi.c.143AC119528CBDFE.idx  inv_mpu.c.E1671D8820AAEA4D.idx  inv_mpu.h.9078DAAAECE550D0.idx  inv_mpu_dmp_motion_driver.c.43A636D4EFEBEE4A.idx  inv_mpu_dmp_motion_driver.h.167D8213C71E43B6.idx  lcd.c.78953C6E043821BB.idx  lcd.h.F31B2CF7EAA21830.idx  (+35 more)
BSP/: CMakeLists.txt  sys.c  sys.h
BSP/bootload/: boot.c  boot.h
BSP/gpio/: CMakeLists.txt  gpio.c  gpio.h  stm32f4xx_gpio.c  stm32f4xx_gpio.h
BSP/i2c/: hardi2c.c  hardi2c.h  softi2c.c  softi2c.h  stm32f4xx_i2c.h
BSP/spi/: CMakeLists.txt  hardspi.h  softspi.c  softspi.h
BSP/systick/: systick.c  systick.h
BSP/usart/: CMakeLists.txt  Serial.c  Serial.h  usart.c  usart.h
CORE/: CMakeLists.txt  STM32F429IGTx_FLASH.ld  startup_stm32f429_439xx.c  startup_stm32f429_439xx.s  stm32f4xx.h  stm32f4xx_it.h  stratup.c  system_stm32f4xx.c
Config/: cmsis_dap.cfg
GUI/: lcd_gui.cpp  lcd_gui.h
HARDWARE/: CMakeLists.txt
HARDWARE/LCD/: CMakeLists.txt  font.h  lcd.c  lcd.h  ltdc.c  ltdc.h
HARDWARE/LCD/GUI/: CMakeLists.txt  exti.c  lcd_gui.cpp  lcd_gui.h
HARDWARE/LCD/TOUCH/: CMakeLists.txt  ctiic.c  ctiic.h  ft5206.c  ft5206.h  gt9xxx.c  gt9xxx.h  touch.c  touch.h
HARDWARE/MPU6050/: CMakeLists.txt  inv_mpu.c  inv_mpu.h  mpu6050.c  mpu6050.h  myiic.c  myiic.h
HARDWARE/OLED/: CMakeLists.txt  OLED.c  OLED.h  OLED_Data.c  OLED_Data.h
HARDWARE/SDRAM/: CMakeLists.txt  sdram.c  sdram.h
HARDWARE/TOUCH/: ctiic.c  ctiic.h  ft5206.c  ft5206.h  gt9xxx.c  gt9xxx.h  touch.c  touch.h
HARDWARE/W25Q64/: spiFlash.c  spiFlash.h
Project/: CMakeLists.txt  Project.h
Project/BSP/: CMakeLists.txt  pwm.c
Project/BSP/ADC/: CMakeLists.txt  adc.c  stm32f4xx_adc.c
Project/BSP/HW_201/: hw201.c  hw201.h
Project/BSP/KEY/: key.c
Project/BSP/LED/: led.c
Project/BSP/PWM/: CMakeLists.txt  pwm.c  stm32f4xx_tim.c
Project/BSP/TB6612/: port.c  port.h  tb6612_port.c  tb6612_port.h
Project/Control/: control.cpp  control.h
Project/Dev/: CMakeLists.txt
Project/Dev/ADC/: CMakeLists.txt  adc.c
Project/Dev/HW_201/: hw201.c  hw201.h
Project/Dev/KEY/: key.c
Project/Dev/LED/: CMakeLists.txt  led.c
Project/Dev/PWM/: pwm.c  stm32f4xx_tim.c  stm32f4xx_tim.h
Project/Dev/TB6612/: CMakeLists.txt  tb6612_port.c  tb6612_port.h
Project/LIB/: CMakeLists.txt
Project/LIB/Control/: CMakeLists.txt  ControlTask.c  ControlTask.cpp  control.c  control.cpp  control.h
Project/LIB/PID/: CMakeLists.txt  pid.c  pid.h
Project/LIB/Tools/: CMakeLists.txt  tools.c
RTOS/: CMakeLists.txt  croutine.c
RTOS/comment/: CMakeLists.txt  FreeRTOS.h  FreeRTOSConfig.h  croutine.c  portable.h  tasks.c
RTOS/include/: FreeRTOS.h  FreeRTOSConfig.h  portable.h
RTOS/portable/: CMakeLists.txt
RTOS/portable/ARM_CM4F/: port.c
USER/: CMakeLists.txt  RTOSTask.c  RTOSTaskConfig.h  RTOSTsak.c  main.c  main.cpp  main.h  note.md  test.c
